--- a/index.html
+++ b/index.html
@@ -24,14 +24,31 @@
             </a>
             <h2>Providing the world with up to date Ringgold coverage</h2>
             <nav>
-                <div style="border-left:2px solid lightgrey;"><a class="header-img" href="schedule.html">Schedule</a></div>
-                <div><a class="header-img" href="lunch_calendar.html" style="color: white;">Lunch Calendar</a></div>
-                <div><a class="header-img" href="news.html">News</a></div>
-                <div><a class="header-img" href="https://ringgoldrams.org/">Sports</a></div>
-                <div><a class="header-img" href="clubs.html">Clubs</a></div>
-                <div><a class="header-img" href="blog.html">Blog</a></div>
+                <div class="alert" style="border-left:2px solid lightgrey;"><a class="navLink" href="index.html">Home <img src="assets/images/dot.gif" width="15px;"></a></div>
+                <div class="alert"><a class="navLink" href="schedule.html">Schedule <img src="assets/images/dot.gif" width="15px;"></a></div>
+                <div class="alert"><a class="navLink" href="lunch_calendar.html">Lunch Calendar <img src="assets/images/dot.gif" width="15px;"></a></div>
+                <div><a class="navLink" href="news.html">News</a></div>
+                <div><a class="navLink" href="https://ringgoldrams.org/">Sports</a></div>
+                <div><a class="navLink" href="clubs.html">Clubs</a></div>
+                <div><a class="navLink" href="blog.html">Blog</a></div>
             </nav>
         </header>
+        <aside>
+            <h2 class="text">Top 5 Movies of All Time</h2>
+            <hr>
+            <br>
+            <ol class="text">
+                <li>Spiderman: No Way Home</li>
+                <br>
+                <li>The Batman</li>
+                <br>
+                <li>Titanic</li>
+                <br>
+                <li>Saving Private Ryan</li>
+                <br>
+                <li>Forest Gump</li>
+            </ol>
+        </aside>
         <section>
             <main>
                 <h1>This is Bryan Nguyen, an aspiring romance novalist and entrepreneur</h1>
@@ -48,7 +65,7 @@
                 </div>
                 <br>
                 <h1>This is Jacob Meyer, football prodigy and professional body builder</h1>
-                <div class="mainContainer">
+                <div class="mainContainer" style="margin-bottom: 50px;">
                     <img class="image" src="assets/images/jacob_image.jpg">
                     <div>
                         <p>
@@ -59,35 +76,12 @@
                         </p>
                     </div>
                 </div>
-                <br>
-                <div style="margin: 0 5%;">
-                    <div>
-                        <p class="text">Thanks to the magical teaching powers of Mr. Kostelnik, we are able to develop this website on our own. 
-                            As we continue to be educated in the fascinating field of Website Design, this page will improve. 
-                            Brian Colditz did not assist us on this endeavour. That being said: 
-                        </p>
-                    </div>
-                    <div style="display:flex;">
-                        <div style="width:50%;">
-                            <blockquote class="text">
-                                <i>"Life is just a bag of chips. Try not over complicate it. You can love it or hate it just promise me you'll never throw it away. 
-                                Because one day, when I'm gone, you'll be left alone eating chips on dark winter night. 
-                                Just remember that's when you need to savor the flavor the most."</i>
-                            </blockquote>
-                            <br>
-                            <blockquote class="text" style="font-size: 18px;">~ Bryan Nguyen</blockquote>
-                        </div>
-                        <img src="assets/images/lays.jpg" alt="lays" width=300px  style="margin:auto;">
-                    </div>
-                    <p style="font-size: 20px; color:lightgrey; margin-bottom: 2%;">P.S please give us bonus points.</p>
-                    <div style="margin-bottom:100px;"><a id="button" href="trust_me" role="button">Click here</a></div>
-                </div>
-        </main>
-        <footer>
-            <hr>
-            <h2>Have an amazing day!</h2>
-        </footer>
-    </section>
+            </main>
+            <footer>
+                <hr>
+                <h2 class="text">&copy; 2022 The Ringgold Times Company</h2>
+            </footer>
+        </section>
     </body>
 </html>
 
